--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     --padx: clamp(14px, 4vw, 60px);
     --max: 1120px;
 
-    /* a bit more color so the glass blur is visible */
+    /* more color detail behind glass so blur is visible */
     --c1: rgba(140,210,255,.34);
     --c2: rgba(205,175,255,.28);
     --c3: rgba(255,210,170,.20);
@@ -31,7 +31,6 @@
     font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     color: var(--ink);
 
-    /* more “detail” behind the glass so blur is noticeable */
     background:
       radial-gradient(540px 360px at 18% 18%, rgba(124, 92, 255, .20), transparent 60%),
       radial-gradient(560px 380px at 82% 22%, rgba(0, 224, 255, .16), transparent 62%),
@@ -41,14 +40,14 @@
       linear-gradient(180deg, var(--bg0), var(--bg1));
   }
 
-  /* ===== Atmosphere layers (keep them sharper!) ===== */
+  /* ===== Atmosphere layers ===== */
   .atmo{
     position:fixed; inset:-20%; pointer-events:none; z-index:-2;
     background:
       radial-gradient(700px 420px at 18% 20%, var(--c1), transparent 70%),
       radial-gradient(720px 460px at 78% 22%, var(--c2), transparent 72%),
       radial-gradient(820px 540px at 55% 78%, var(--c3), transparent 72%);
-    filter: blur(4px); /* was very blurred before */
+    filter: blur(4px);
     opacity: 1;
   }
 
@@ -102,13 +101,31 @@
   }
   .nav-links a:hover{ background: rgba(255,255,255,.28); color: var(--ink); transform: translateY(-1px); }
 
+  /* ===== VisionOS Liquid Bubble layer (top-right) ===== */
+  nav{ position:sticky; } /* keep sticky */
+  nav::after{ content:""; } /* no-op, just keeps nav block stable */
+
+  .bubble-wrap{
+    position:absolute;
+    top:-42px;
+    right:-64px;
+    width:560px;
+    height:340px;
+    pointer-events:auto;
+    z-index: 2; /* above nav background */
+  }
+  #liquidBubbles{
+    width:100%;
+    height:100%;
+    display:block;
+  }
+
   /* ===== CLEAR LIQUID GLASS ===== */
   .glass{
     position:relative;
     overflow:hidden;
     border-radius: var(--r);
 
-    /* VERY transparent base */
     background: linear-gradient(
       180deg,
       rgba(255,255,255,.10),
@@ -125,7 +142,6 @@
       inset 0 1px 0 rgba(255,255,255,.90),
       inset 0 -20px 35px rgba(11,19,32,.05);
 
-    /* LESS blur = clearer glass */
     backdrop-filter: blur(12px) saturate(1.6) contrast(1.08);
     -webkit-backdrop-filter: blur(12px) saturate(1.6) contrast(1.08);
 
@@ -133,7 +149,6 @@
     transition: transform .25s ease, box-shadow .25s ease;
   }
 
-  /* Inner rim (gives “thickness”) */
   .glass::after{
     content:"";
     position:absolute;
@@ -146,7 +161,6 @@
     opacity: 1;
   }
 
-  /* Specular sweep (stronger for “jelly”) */
   .glass::before{
     content:"";
     position:absolute;
@@ -285,7 +299,6 @@
     position: relative;
     overflow:hidden;
   }
-  /* caustic sparkle */
   .media::before{
     content:"";
     position:absolute; inset:-30%;
@@ -325,15 +338,13 @@
   }
 
   /* ===== Optional: subtle 3D tilt on pointer ===== */
-  .tilt{
-    transform-style: preserve-3d;
-  }
+  .tilt{ transform-style: preserve-3d; }
 
   @media (prefers-reduced-motion: reduce){
     .glass, .glass::before, .btn{ transition:none !important; }
   }
 
-  /* ===== Fallback if backdrop-filter not supported (e.g. some Firefox setups) ===== */
+  /* ===== Fallback if backdrop-filter not supported ===== */
   @supports not ((backdrop-filter: blur(1px)) or (-webkit-backdrop-filter: blur(1px))) {
     .glass, nav, .btn, .tag {
       backdrop-filter: none !important;
@@ -354,6 +365,12 @@
 
   <nav>
     <div class="brand">S.M. <small>Portfolio</small></div>
+
+    <!-- VisionOS liquid glass bubbles (top-right) -->
+    <div class="bubble-wrap" aria-hidden="true">
+      <canvas id="liquidBubbles"></canvas>
+    </div>
+
     <div class="nav-links">
       <a href="#projekte">Projekte</a>
       <a href="#leistungen">Leistungen</a>
@@ -481,11 +498,195 @@
         const y = (e.clientY - r.top) / r.height - 0.5;
         el.style.transform = `translateY(-2px) rotateX(${(-y*4).toFixed(2)}deg) rotateY(${(x*5).toFixed(2)}deg)`;
       });
-      el.addEventListener("mouseleave", () => {
-        el.style.transform = "";
-      });
+      el.addEventListener("mouseleave", () => { el.style.transform = ""; });
     });
   }
+
+  /* ===== VisionOS-level liquid bubbles (collision + repulsion + glass shading) ===== */
+  const canvas = document.getElementById("liquidBubbles");
+  const ctx = canvas.getContext("2d", { alpha: true });
+
+  let bubbles = [];
+  let mouse = { x: null, y: null, active: false };
+
+  function resizeBubbles(){
+    const rect = canvas.parentElement.getBoundingClientRect();
+    const dpr = Math.max(1, Math.min(2, window.devicePixelRatio || 1)); // cap DPR for perf
+    canvas.width = Math.floor(rect.width * dpr);
+    canvas.height = Math.floor(rect.height * dpr);
+    canvas.style.width = rect.width + "px";
+    canvas.style.height = rect.height + "px";
+    ctx.setTransform(dpr, 0, 0, dpr, 0, 0);
+  }
+  resizeBubbles();
+  window.addEventListener("resize", resizeBubbles);
+
+  class Bubble{
+    constructor(){
+      this.radius = 26 + Math.random() * 42;
+      this.x = 40 + Math.random() * (canvas.clientWidth - 80);
+      this.y = 40 + Math.random() * (canvas.clientHeight - 80);
+
+      this.vx = (Math.random() - 0.5) * 1.2;
+      this.vy = (Math.random() - 0.5) * 1.2;
+
+      this.mass = this.radius * 0.09;
+      this.wobble = Math.random() * Math.PI * 2;
+    }
+
+    update(){
+      // gentle drift
+      this.wobble += 0.02;
+      this.vx += Math.sin(this.wobble) * 0.002;
+      this.vy += Math.cos(this.wobble) * 0.002;
+
+      this.x += this.vx;
+      this.y += this.vy;
+
+      // damping = liquid feel
+      this.vx *= 0.992;
+      this.vy *= 0.992;
+
+      const w = canvas.clientWidth;
+      const h = canvas.clientHeight;
+
+      // wall bounce
+      if(this.x < this.radius){ this.x = this.radius; this.vx *= -0.95; }
+      if(this.x > w - this.radius){ this.x = w - this.radius; this.vx *= -0.95; }
+      if(this.y < this.radius){ this.y = this.radius; this.vy *= -0.95; }
+      if(this.y > h - this.radius){ this.y = h - this.radius; this.vy *= -0.95; }
+
+      // mouse repulsion
+      if(mouse.active){
+        const dx = this.x - mouse.x;
+        const dy = this.y - mouse.y;
+        const dist = Math.hypot(dx, dy) || 0.0001;
+        const range = 170;
+
+        if(dist < range){
+          const force = (range - dist) / range;
+          const push = 2.2 * force;
+          this.vx += (dx / dist) * push;
+          this.vy += (dy / dist) * push;
+        }
+      }
+    }
+
+    draw(){
+      // subtle “liquid” breathing
+      const r = this.radius * (1 + Math.sin(this.wobble) * 0.015);
+
+      // outer fill (glass)
+      const g = ctx.createRadialGradient(
+        this.x - r * 0.35,
+        this.y - r * 0.35,
+        r * 0.12,
+        this.x,
+        this.y,
+        r
+      );
+      g.addColorStop(0, "rgba(255,255,255,0.92)");
+      g.addColorStop(0.22, "rgba(255,255,255,0.28)");
+      g.addColorStop(0.55, "rgba(255,255,255,0.10)");
+      g.addColorStop(1, "rgba(255,255,255,0.04)");
+
+      ctx.beginPath();
+      ctx.arc(this.x, this.y, r, 0, Math.PI*2);
+      ctx.fillStyle = g;
+      ctx.fill();
+
+      // rim stroke
+      ctx.strokeStyle = "rgba(255,255,255,0.40)";
+      ctx.lineWidth = 1.4;
+      ctx.stroke();
+
+      // specular highlight (small)
+      ctx.beginPath();
+      ctx.arc(this.x - r*0.28, this.y - r*0.28, r*0.22, 0, Math.PI*2);
+      ctx.fillStyle = "rgba(255,255,255,0.18)";
+      ctx.fill();
+    }
+  }
+
+  function resolveCollision(a, b){
+    const dx = b.x - a.x;
+    const dy = b.y - a.y;
+    const dist = Math.hypot(dx, dy) || 0.0001;
+    const minDist = a.radius + b.radius;
+
+    if(dist < minDist){
+      // separate (softly)
+      const nx = dx / dist;
+      const ny = dy / dist;
+      const overlap = (minDist - dist);
+
+      a.x -= nx * overlap * 0.5;
+      a.y -= ny * overlap * 0.5;
+      b.x += nx * overlap * 0.5;
+      b.y += ny * overlap * 0.5;
+
+      // impulse (elastic-ish)
+      const rvx = b.vx - a.vx;
+      const rvy = b.vy - a.vy;
+      const velAlongNormal = rvx * nx + rvy * ny;
+
+      // if moving apart, skip
+      if(velAlongNormal > 0) return;
+
+      const restitution = 0.88; // “bouncy but viscous”
+      const j = -(1 + restitution) * velAlongNormal / (1/a.mass + 1/b.mass);
+
+      const impX = j * nx;
+      const impY = j * ny;
+
+      a.vx -= impX / a.mass;
+      a.vy -= impY / a.mass;
+      b.vx += impX / b.mass;
+      b.vy += impY / b.mass;
+
+      // slight tangential friction (liquid)
+      a.vx *= 0.995; a.vy *= 0.995;
+      b.vx *= 0.995; b.vy *= 0.995;
+    }
+  }
+
+  // init
+  for(let i=0;i<7;i++) bubbles.push(new Bubble());
+
+  // pointer events
+  canvas.addEventListener("mousemove", (e)=>{
+    const rect = canvas.getBoundingClientRect();
+    mouse.x = e.clientX - rect.left;
+    mouse.y = e.clientY - rect.top;
+    mouse.active = true;
+  });
+  canvas.addEventListener("mouseenter", ()=>{ mouse.active = true; });
+  canvas.addEventListener("mouseleave", ()=>{
+    mouse.active = false;
+    mouse.x = null; mouse.y = null;
+  });
+
+  // render loop
+  function animateBubbles(){
+    const w = canvas.clientWidth;
+    const h = canvas.clientHeight;
+
+    ctx.clearRect(0,0,w,h);
+
+    // collisions
+    for(let i=0;i<bubbles.length;i++){
+      bubbles[i].update();
+      for(let j=i+1;j<bubbles.length;j++){
+        resolveCollision(bubbles[i], bubbles[j]);
+      }
+    }
+
+    // draw
+    bubbles.forEach(b => b.draw());
+
+    requestAnimationFrame(animateBubbles);
+  }
+  animateBubbles();
 </script>
 </body>
 </html>
